--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "node-telegram-bot-api": "^0.64.0",
-    "viber-bot": "^1.0.13",
-    "body-parser": "^1.20.2",
-    "axios": "^1.6.2",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "node-telegram-bot-api": "^0.66.0",
     "uuid": "^9.0.1",
-    "moment": "^2.29.4"
+    "viber-bot": "^1.0.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
