--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-router-dom": "^6.20.0",
+    "react-select": "^5.10.2",
     "recharts": "^2.10.3",
     "styled-components": "^6.1.19"
   },
