add-selling-price-page

--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "@mui/material": "^7.3.5",
     "@mui/styled-engine-sc": "^7.3.5",
     "@mui/x-data-grid": "^8.18.0",
+    "@mui/x-data-grid-generator": "^8.18.0",
     "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
     "lucide-react": "^0.294.0",
     "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-draggable": "^4.5.0",
     "react-router-dom": "^6.20.0",
     "react-select": "^5.10.2",
     "reactflow": "^11.11.4",
