--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
     "moment": "^2.29.4",
+    "morgan": "^1.10.0",
     "node-telegram-bot-api": "^0.66.0",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.1",
     "viber-bot": "^1.0.13"
   },
