--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "helmet": "^7.1.0",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "node-telegram-bot-api": "^0.66.0",
     "socket.io": "^4.6.1",
     "uuid": "^9.0.1",
-    "viber-bot": "^1.0.13"
+    "viber-bot": "^1.0.13",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
