--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "seed": "node src/utils/seedData.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -20,11 +20,16 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
     "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^6.9.7",
+    "pg": "^8.16.3",
+    "pdfkit": "^0.14.0",
     "socket.io": "^4.6.1",
+    "twilio": "^4.19.0",
     "uuid": "^9.0.1",
     "viber-bot": "^1.0.13",
     "xlsx": "^0.18.5"
