refactor: Remove Supabase, use native PostgreSQL
BREAKING CHANGE: Removed all Supabase dependencies

- Removed @supabase/supabase-js package
- Deleted src/config/supabase.js
- Renamed supabase/ folder to database/
- Updated all routes to use native PostgreSQL queries
- Updated database.js to use pg pool directly
- Removed Supabase compatibility layer
- Updated all documentation (README, deployment guides)
- Updated .env.example to remove Supabase variables
- Updated docker-compose.yml
- Updated Settings page to show PostgreSQL
- All routes now use pool.query() directly

Benefits:
- Simpler codebase
- Better performance (no abstraction layer)
- Native PostgreSQL features
- Easier to maintain
- Smaller bundle size

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,7 @@
 # Database Configuration
-# For Render PostgreSQL, use the External Database URL from your Render dashboard
+# For Render PostgreSQL, use the Internal Database URL from your Render dashboard
 # Format: postgres://username:password@hostname:port/database
-DATABASE_URL=postgresql://myanmar_pos_user:sMzH4AI5jMI1jGDKfhtxzE7PLMxRgNgl@dpg-d4i60d3e5dus73e32et0-a.singapore-postgres.render.com/myanmar_pos
-
-# Legacy Supabase Configuration (if migrating from Supabase)
-# SUPABASE_URL=https://ysxxwkefvasiqxlkpwvh.supabase.co
-# SUPABASE_ANON_KEY=your_anon_key
-# SUPABASE_SERVICE_KEY=your_service_key
+DATABASE_URL=postgresql://myanmar_pos_user:password@hostname:5432/myanmar_pos
 
 # Server Configuration
 PORT=3001
