Add: Auto webhook registration system
Features:
- Automatic webhook registration on server startup
- Checks settings table for bot tokens
- Registers Telegram webhook automatically
- Registers Viber webhook automatically
- Logs Messenger manual setup instructions
- Runs in production mode or when AUTO_REGISTER_WEBHOOKS=true

Implementation:
- Created src/utils/webhookSetup.js
- Auto-registers webhooks 3 seconds after server start
- Checks current webhook before re-registering
- Handles errors gracefully (doesn't crash server)
- Added manual trigger endpoint: POST /api/webhooks/register

Configuration:
- WEBHOOK_DOMAIN environment variable
- AUTO_REGISTER_WEBHOOKS flag
- Bot tokens from settings table
- Works with Render deployment

Documentation:
- Created WEBHOOK_SETUP.md
- Setup instructions for all bots
- Troubleshooting guide
- Verification steps
- Security best practices

Benefits:
- No manual webhook setup needed
- Auto-registers on deploy
- Survives server restarts
- Production-ready
- Easy to configure

--- a/.env.production.example
+++ b/.env.production.example
@@ -43,3 +43,8 @@ FB_API_VERSION=v18.0
 # WebSocket Configuration
 # Socket.IO will automatically use wss:// in production
 # No additional configuration needed
+
+# Webhook Auto-Registration
+# Set your production domain for automatic webhook registration
+WEBHOOK_DOMAIN=https://your-backend.onrender.com
+AUTO_REGISTER_WEBHOOKS=true
