Update production environment configuration with actual deployment URLs and bot tokens

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,14 +1,14 @@
 # Production Environment Variables for Render Deployment
 
 # Database Configuration (Render PostgreSQL)
-DATABASE_URL=postgresql://user:password@host.render.com/database
+DATABASE_URL=postgresql://myanmar_pos_user:sMzH4AI5jMI1jGDKfhtxzE7PLMxRgNgl@dpg-d4i60d3e5dus73e32et0-a/myanmar_pos
 
 # Server Configuration
 PORT=3001
 NODE_ENV=production
 
 # Frontend URL (Your deployed frontend)
-CLIENT_URL=https://your-frontend.netlify.app
+CLIENT_URL=https://myanmar-pos-frontend.onrender.com
 
 # JWT Configuration (CHANGE THIS!)
 JWT_SECRET=your-super-secret-production-jwt-key-change-this
@@ -27,12 +27,12 @@ TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1234567890
 
 # Bot Integrations - Optional
-VIBER_BOT_TOKEN=your_viber_bot_token
+VIBER_BOT_TOKEN=4f89b4d323a7e5e2-31584a999fd71ef7-bbf6f67804bc6393
 VIBER_BOT_NAME=Myanmar POS Bot
-VIBER_WEBHOOK_URL=https://your-backend.onrender.com/webhooks/viber
+VIBER_WEBHOOK_URL=https://myanmar-pos-backend.onrender.com/viber/webhook
 
-TELEGRAM_BOT_TOKEN=your_telegram_bot_token
-TELEGRAM_WEBHOOK_URL=https://your-backend.onrender.com/webhooks/telegram
+TELEGRAM_BOT_TOKEN=8299937496:AAFrJu3Bz1AxC-vNZmR_G9uExuogJ3bEDdo
+TELEGRAM_WEBHOOK_URL=https://myanmar-pos-backend.onrender.com/telegram/webhook
 
 MESSENGER_PAGE_ACCESS_TOKEN=your_messenger_page_access_token
 MESSENGER_VERIFY_TOKEN=your_messenger_verify_token
@@ -46,5 +46,5 @@ FB_API_VERSION=v18.0
 
 # Webhook Auto-Registration
 # Set your production domain for automatic webhook registration
-WEBHOOK_DOMAIN=https://your-backend.onrender.com
+WEBHOOK_DOMAIN=https://myanmar-pos-backend.onrender.com
 AUTO_REGISTER_WEBHOOKS=true
