--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node src/server.js",
     "client": "cd client && npm start",
     "build": "cd client && npm run build",
-    "seed": "node src/utils/seedData.js"
+    "seed": "node src/utils/seedData.js",
+    "migrate": "node scripts/auto-migrate.js",
+    "postinstall": "node scripts/auto-migrate.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
